Cleaned up quiz input form

--- a/sbmeteorapp.html
+++ b/sbmeteorapp.html
@@ -125,18 +125,16 @@
     </p>
 
     <form role="form" class="user-guess">
-      <div class="row">
-        <div class="form-group col-lg-6" style="margin: 0 0;">
-          <div class="input-group">
+      <div class="form-group" style="margin: 0 0;">
+        <div class="input-group">
 
-            <input type="text" name="text" class="user-guess form-control" placeholder="Type what you hear.">
+          <input type="text" name="text" class="user-guess form-control" placeholder="Type what you hear.">
 
-            <span class="input-group-btn">
-              <button type="submit" value="submit" class="user-guess btn btn-default" {{activeQuizSubmit}}>Check</button>
-            </span>
+          <span class="input-group-btn">
+            <button type="submit" value="submit" class="user-guess btn btn-default" {{activeQuizSubmit}}>Check</button>
+          </span>
 
-          </div><!-- /input-group -->
-        </div>
+        </div><!-- /input-group -->
       </div>
     </form>
   </div>
