--- a/sbmeteorapp.html
+++ b/sbmeteorapp.html
@@ -1,7 +1,8 @@
 <head>
   <title>Speech Banana</title>
   <meta name="viewport" content="width=device-width">
-  <link rel="stylesheet" href="css/sbmeteorapp.css">
+  <meta name="keywords" content="Auditory training, AT, CI, cochlear implant, HA, hearing aid, HOH, hard of hearing, web app, free, Tilak, JHU, Johns Hopkins, ICM, Institute for Computational Medicine">
+  <meta name="description" content="Free auditory training for CI and HA users">
 </head>
 
 
@@ -16,7 +17,7 @@
 
 <template name="appBody">
   {{#if currentUser}}
-    {{> lessonShow}}
+    {{> chapterList}}
   {{else}}
     <div class="container main">
     {{> welcomePage}}
@@ -30,18 +31,51 @@
 </template>
 
 
-<template name="lessonShow">
+<template name="chapterList">
   <div class="container main">
-    {{#each lessons}}
-    <p>
-      <button class='btn btn-default btn-lesson' onclick="{{pathFor 'wordSetShow'}}">{{number}}: {{title}}</button>
-    </p>
+
+  <div class="panel-group" id="accordion-chapter" role="tablist" aria-multiselectable="false">
+    
+    {{#each chapters}}
+
+    <div class="panel panel-default">
+      <div class="panel-heading" role="tab" id="heading{{number}}">
+        <h4 class="panel-title">
+          <a class="collapsed chapter" data-toggle="collapse" data-parent="#accordion-chapter" href="#collapse{{number}}" aria-expanded="false" aria-controls="collapse{{number}}">
+            {{title}}
+          </a>
+        </h4>
+      </div>
+      <div id="collapse{{number}}" class="panel-collapse collapse {{isActiveChapter}}" role="tabpanel" aria-labelledby="heading{{number}}">
+        <div class="panel-body">
+
+          {{> lessonList}}
+
+        </div>
+      </div>
+    </div>
+
     {{/each}}
+
+    </div>
   </div>
+</template>
+
+
+<template name="lessonList">
+    {{#each lessons}}
+
+    <p>
+      <a class='btn-lesson' href="{{pathFor 'showLesson'}}">
+        {{number}}: {{title}}
+      </a>
+    </p>
+
+    {{/each}}
  </template>
 
 
-<template name="wordSetShow">
+<template name="showLesson">
   <div class="container word-show">
     {{#with lesson}}
     <h3>Lesson {{number}}: {{title}}</h3>
@@ -52,14 +86,14 @@
 
       {{#each sets}}
       <div class="panel panel-default">
-        <div class="panel-heading" role="tab" id="heading{{set}}">
+        <div class="panel-heading" role="tab" id="heading{{number}}">
           <h4 class="panel-title">
-            <a class="collapsed word-set" data-toggle="collapse" data-parent="#accordion" href="#collapse{{set}}" aria-expanded="false" aria-controls="collapse{{set}}">
+            <a class="collapsed word-set" data-toggle="collapse" data-parent="#accordion" href="#collapse{{number}}" aria-expanded="false" aria-controls="collapse{{number}}">
               {{title}}
             </a>
           </h4>
         </div>
-        <div id="collapse{{set}}" class="panel-collapse collapse {{isActiveSet}}" role="tabpanel" aria-labelledby="heading{{set}}">
+        <div id="collapse{{number}}" class="panel-collapse collapse {{isActiveSet}}" role="tabpanel" aria-labelledby="heading{{number}}">
           <div class="panel-body">
 
             <ul class="list-inline ul-word">
@@ -252,8 +286,8 @@
       <!-- Non-collapsing right-side icons -->
       <div class="nav navbar-nav navbar-right">
         <a id="university-link" href="http://www.jhu.edu/">
-          <img class="hidden-xs" id="university-logo" src="img/university_logo_small_horizontal_white.png">
-          <img class="hidden-lg hidden-md hidden-sm" id="university-shield" src="img/university_shield_small_white.png">
+          <img class="hidden-xs" id="university-logo" src="/img/university_logo_small_horizontal_white.png">
+          <img class="hidden-lg hidden-md hidden-sm" id="university-shield" src="/img/university_shield_small_white.png">
         </a>
       </div>
       <!-- the collapsing menu -->
