Cleaned out unused js methods

--- a/sbmeteorapp.html
+++ b/sbmeteorapp.html
@@ -185,15 +185,7 @@
       </button>
     </div>
 
-    <div class="col-xs-6" style="display: inline;"> <!-- style="visibility: {{hideGroupMenu}};"> -->
-      <!-- <ul class="list-inline word-group">
-        {{#each groups}}
-        <li>
-          <button type="button" class="btn btn-default btn-word-group {{activeGroup}}" style="outline: none;">{{group}}</button>
-        </li>
-        {{/each}}
-      </ul> -->
-
+    <div class="col-xs-6" style="display: inline;">
       {{> playModalButton}}
     </div>
 
